# CreativeCoins

./: README.md  settings.py
code/: .env.sample  Dockerfile  Makefile  docker-compose.yml
code/backend/: pyproject.toml
code/backend/django_api/: settings.py
